Implementação do SSO SAP com integração ao Approuter e configuração de permissões